syntax = "proto3";

package api;

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginResponse {
	string token = 1;
}

service Login {
	rpc PostLogin(LoginRequest) returns (LoginResponse);
}
